// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectBusinessHoursEntityVersions Return a empty array if the businessHour has no versions 1`] = `undefined`;

exports[`selectBusinessHoursEntityVersions Return an array if the businessHour has versions 1`] = `undefined`;

exports[`selectBusinessHoursV2FormInitialValues Return initial form values when creating a new entity 1`] = `
Immutable.Map {
  "shared": false,
}
`;

exports[`selectBusinessHoursV2FormInitialValues Return initial form values when updating an entity 1`] = `
Immutable.Map {
  "id": "mockId",
  "shared": false,
  "active": true,
  "versions": Immutable.List [],
}
`;
